k8s/apps/production/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: https
      port: 80
      protocol: TCP
      targetPort: 80
