k8s/apps/production/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - excalidraw.halvorteigen.no
      secretName: excalidraw-halvorteigen-tls
  rules:
    - host: excalidraw.halvorteigen.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
